[package]
name = "proc-macro-include-std-test"
version = "0.1.0"
edition = "2024"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/proc-macro-include-std-test"
description = "Test how to get a span from an arbitrary text file."
license = "MIT-0 OR MIT OR Apache-2.0"
publish = false

[lib]
proc-macro = true
